force-app/main/default/objects/Schedule_Template__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <description>Closed time</description>
    <label>Closed</label>
    <type>Time</type>
</CustomField>