force-app/main/default/objects/Schedule_Template__c/fields/Days_in_Period__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Period__c</fullName>
    <description>Number of days given the chosen recurrence Period</description>
    <formula>CASE ( 1, IF(ISPICKVAL( Period__c, &quot;Week&quot;) , 1, 0), 7,
IF(ISPICKVAL( Period__c, &quot;Two Week&quot;), 1, 0), 14,
IF(ISPICKVAL( Period__c, &quot;Monthly&quot;), 1, 0), 30, 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>