force-app/main/default/objects/Schedule_Template__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>The frequency period of this Schedule Model</description>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
                <label>Week (7 day)</label>
            </value>
            <value>
                <fullName>Two Week</fullName>
                <label>Two Week (14 day)</label>
            </value>
            <value>
                <fullName>Month</fullName>
                <label>Month (~30 day)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>