force-app/main/default/objects/Schedule_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>Days_in_Period__c</columns>
    <columns>Closed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>